--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -11,6 +11,20 @@ provider:
   memorySize: 256
   stage: ${opt:stage, 'dev'}
 
+resources:
+  Resources:
+    AuctionTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        TableName: AuctionsTable
+        BillingMode: PAY_PER_REQUEST
+
 functions:
   createAuction:
     handler: src/handlers/createAuction.handler
