refactored yaml config for dynamic env, and table name

--- a/auction-service/resources/AuctionsTable.yml
+++ b/auction-service/resources/AuctionsTable.yml
@@ -7,5 +7,5 @@ AuctionsTable:
     KeySchema:
       - AttributeName: id
         KeyType: HASH
-    TableName: AuctionsTable
+    TableName: AuctionsTable-${self:provider.stage}
     BillingMode: PAY_PER_REQUEST
