--- a/auction-service-backend/iam/AuctionsTableIAM.yml
+++ b/auction-service-backend/iam/AuctionsTableIAM.yml
@@ -3,6 +3,7 @@ AuctionsTableIAM:
   Action:
     - dynamodb:PutItem
     - dynamodb:Scan
+    - dynamodb:UpdateItem
     - dynamodb:GetItem
   Resource:
     - ${self:custom.AuctionsTable.arn}
