disabled recurring function calls

--- a/auction-service-backend/serverless.yml
+++ b/auction-service-backend/serverless.yml
@@ -52,8 +52,8 @@ functions:
 
   processAuctions:
     handler: src/handlers/processAuctions.handler
-    events:
-      - schedule: rate(1 minute)
+    # events:
+    #   - schedule: rate(1 minute)
 
 custom:
   AuctionsTable:
