--- a/auction-service-backend/resources/AuctionsTable.yml
+++ b/auction-service-backend/resources/AuctionsTable.yml
@@ -4,8 +4,21 @@ AuctionsTable:
     AttributeDefinitions:
       - AttributeName: id
         AttributeType: S
+      - AttributeName: status
+        AttributeType: S
+      - AttributeName: endingAt
+        AttributeType: S
     KeySchema:
       - AttributeName: id
         KeyType: HASH
+    GlobalSecondaryIndexes:
+      - IndexName: statusAndEndDate
+        KeySchema:
+          - AttributeName: status
+            KeyType: HASH
+          - AttributeName: endingAt
+            KeyType: RANGE
+        Projection:
+          ProjectionType: ALL
     TableName: AuctionsTable-${self:provider.stage}
     BillingMode: PAY_PER_REQUEST
