added indexed virtual table arn in IAM resources

--- a/auction-service-backend/iam/AuctionsTableIAM.yml
+++ b/auction-service-backend/iam/AuctionsTableIAM.yml
@@ -7,3 +7,7 @@ AuctionsTableIAM:
     - dynamodb:GetItem
   Resource:
     - ${self:custom.AuctionsTable.arn}
+    - !Join [
+        '/',
+        ['${self:custom.AuctionsTable.arn}', 'index', 'statusAndEndDate'],
+      ]
