Added query permission for user on the dynamodb table

--- a/auction-service-backend/iam/AuctionsTableIAM.yml
+++ b/auction-service-backend/iam/AuctionsTableIAM.yml
@@ -5,6 +5,7 @@ AuctionsTableIAM:
     - dynamodb:Scan
     - dynamodb:UpdateItem
     - dynamodb:GetItem
+    - dynamodb:Query
   Resource:
     - ${self:custom.AuctionsTable.arn}
     - !Join [
