--- a/auction-service-backend/resources/AuctionsBucket.yml
+++ b/auction-service-backend/resources/AuctionsBucket.yml
@@ -2,6 +2,11 @@ AuctionsBucket:
   Type: AWS::S3::Bucket
   Properties:
     BucketName: ${self:custom.AuctionsBucket.name}
+    # LifecycleConfiguration:
+    #   Rules:
+    #     - Id: ExpiresPictures
+    #       Status: Enabled
+    #       ExpirationInDays: 1
 
 AuctionsBucketPolicy:
   Type: AWS::S3::BucketPolicy
