--- a/auction-service-backend/package.json
+++ b/auction-service-backend/package.json
@@ -5,11 +5,14 @@
   "author": "Ariel Weinberger <ariel@codingly.io>",
   "license": "MIT",
   "devDependencies": {
+    "@serverless/eslint-config": "^3.0.0",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^7.30.0",
     "serverless-bundle": "^1.3.3",
     "serverless-pseudo-parameters": "^2.5.0",
     "webpack": "^4.35.2"
